# protohackers-rs

./: 02_means  Cargo.toml  build.sh
src/: primes.rs
tests/: 01_prime.json
