[package]
name = "ph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "^0.10"
futures = "^0.3"
log = "^0.4"
once_cell = "^1.17"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1", features = ["io-util", "macros", "net", "rt"] }